# mb_vortex

./: .gitignore  CITATION.cff  CMakeLists.txt  Makefile  README.md  compile_flags.txt  main.c
examples/: CMakeLists.txt  EN_testing.c  bohm.c  diagonalization.c  example_convergence.cpp  example_density.cpp  example_energies.cpp  example_gpe_bdg.cpp  example_particle_drawing.cpp  example_write_uv.cpp  find_EOmega.c  find_Ecutoff.c  find_energies.c  find_lambdas.c  find_orbitals.c  finding_assymptotic_behaviour_N.c  omegas.c  perturbation.c  random_avg_radius.c  random_positions_plots.c  small_mb.c  testing_GPE_and_BdG.c
fock/: CMakeLists.txt
fock/include/fock/: AnnichilationAdvancer.h  Bogoliubov.h  Core.h  DiskState.h  FockCollection.h  FockState.h  FockStateAdvancer.h  ImportanceTruncation.h  Integrator.h  MeanFieldSolver.h  Numeric.h  ParticleDrawing.h  Workspace.h
fock/src/: Bogoliubov.cpp  DiskState.cpp  FockCollection.cpp  FockState.cpp  ImportanceTruncation.cpp  Integrator.cpp  MeanFieldSolver.cpp  Numeric.cpp  ParticleDrawing.cpp  Workspace.cpp
libs/: CMakeLists.txt
src/: elementary.h  examples.c  examples.h  fock.c  fock.h  fock_bessel.c  fock_fix_mom.c  fock_internal.h  fock_planewave.c  gpe_radial.c  gpe_radial.h  quick_function.c  quick_function.h  rho.c  rho.h  state.c  state.h  testing.c  testing.h  util.c  util.h
